Added trigger command
